fixed some more spacing issues

--- a/styles/main.css
+++ b/styles/main.css
@@ -188,6 +188,14 @@
   box-sizing: border-box;
 }
 
+ol {
+  list-style: circle;
+}
+
+li {
+  margin-left: 1em;
+}
+
 /* Header: Navbar */
 
 .sticky-nav {
@@ -423,6 +431,7 @@ button {
 
 .cloud-tab-title {
   text-align: center;
+  padding: 1em 0;
 }
 
 .cloud-comp-analysis-title {
@@ -833,7 +842,7 @@ button {
   grid-template-columns: 1fr 1fr;
   grid-template-rows: auto auto auto;
   margin: 2em 0;
-  grid-row-gap: 1em;
+  grid-column-gap: 3em;
 }
 
 .cloud-stories-title {
@@ -842,15 +851,18 @@ button {
   grid-row-start: 1;
   grid-row-end: 2;
   justify-self: center;
+  padding-bottom: 2em;
 }
 
-.cloud-stories-content {
+.cloud-stories-text {
   grid-column-start: 1;
   grid-column-end: 2;
   grid-row-start: 2;
   grid-row-end: 3;
   max-width: 550px;
 }
+
+
 
 .cloud-stories-examples {
   grid-column-start: 2;
@@ -865,6 +877,7 @@ button {
   grid-row-start: 3;
   grid-row-end: 4;
   justify-self: center;
+  padding-top: 2em;
 }
 
 /* 
@@ -905,7 +918,6 @@ button {
   grid-template-columns: 1fr 1fr;
   grid-template-rows: auto auto auto;
   margin: 2em 0;
-  grid-row-gap: 1em;
 }
 
 .cloud-flows-title {
@@ -914,6 +926,7 @@ button {
   grid-row-start: 1;
   grid-row-end: 2;
   justify-self: center;
+  padding-bottom: 2em;
 }
 
 .cloud-flows-text {
@@ -937,6 +950,7 @@ button {
   grid-row-start: 3;
   grid-row-end: 4;
   justify-self: center;
+  padding-top: 2em;
 }
 
 /* Cloud - Visual Design tab */
@@ -1017,6 +1031,7 @@ button {
   grid-row-start: 1;
   grid-row-end: 2;
   justify-self: center;
+  padding-bottom: 1em;
 }
 
 .cloud-wireframes-text {
@@ -1043,6 +1058,7 @@ button {
   grid-row-start: 5;
   grid-row-end: 6;
   justify-self: center;
+  padding-top: 1em;
 }
 
 /* 
